# BTI-LiDAR

./: README.md
fake_encoder_sim/: CMakeLists.txt  package.xml
fake_encoder_sim/msg/: FakeEncoder.msg
fake_encoder_sim/src/: fake_encoder_sim_node.cpp
laylidar/: CMakeLists.txt  package.xml
laylidar/config/: laylidar.lua  mapper_params_online_async.yaml
laylidar/launch/: display.launch.py  display_with_gazebo.py
laylidar/src/: down_sample.py
laylidar/src/description/: laylidar_desc.urdf.xacro  os1-64.urdf.xacro
